#############################################################################
PRE-BETA (NOT FOR PUBLIC RELEASE) VERSION 0.1.5       10-25-01
#############################################################################
This version features minor bug fixes and several new features:
  * Fixed shift in center of geometry for OpenDX I/O
  * Made energy evaluation more robust when using NPBE
  * Rearrangments of files and modified compilation behavior
  * Input file support for ion species of varying valency and concentration
  * Input file support incorrect nlev/dime combinations; APBS now finds 
    acceptable settings near to the user's requested values
  * "Automatic focusing".  Users now simply specify the physical parameters
    (temperature, dielectric, etc.), the coarse and fine grid lengths and
    centers, and APBS calculates the rest

#############################################################################
PRE-BETA (NOT FOR PUBLIC RELEASE) VERSION 0.1.4       09-18-01
#############################################################################
This version features major bug fixes introduced in the 0.1.3 release:
  * Chain ID support has been **removed** from the PDB/PQR parser (if anyone
    has a nice, flexible PDB parser they'd like to contribute to the code, I'd
    appreciate it)
  * Configure script has been made compatible with OSF
  * Bug fix in disabling FEtk-specific header files

#############################################################################
PRE-BETA (NOT FOR PUBLIC RELEASE) VERSION 0.1.3       09-13-01
#############################################################################
This version features a few improvements in scripts, PDB parsing flexibility,
and portability, including:
  * Dave Sept upgraded the psize and shift scripts to allow more flexibility in
    PDB formats.
  * Chain ID support has been added to the PDB/PQR parser
  * Removed -g from compiler flags during linking of C and FORTAN under OSF